--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     #outcome {
       font-size: 3rem;
     }
-
   </style>
 </head>
 
@@ -73,7 +72,22 @@
     // ❗ Debug properly using the Console
 
     // 👉 CHALLENGE 1
-    function profileActivation() {
+    function profileActivation(profile, reason) {
+
+      if (profile.active === undefined) {
+        return "impossible to ascertain status"
+      }
+      if (profile.active && profile.reason !== undefined) {
+        return "confirm status manually"
+      }
+      if (!profile.active && profile.reason === undefined) {
+        return "confirm status manually"
+      }
+      if (profile.active) {
+        return { active: false, reason: reason }
+      }
+      return { active: true }
+
       // 🧠 profileActivation takes two arguments, profile and reason, which are an object and a string respectively
       //  The reason arg is only used -and therefore required- to deactivate profiles, not to activate them
       //  The profile arg has an `active` property holding a Boolean value
@@ -88,7 +102,17 @@
     }
 
     // 👉 CHALLENGE 2
-    function mineSweeper() {
+    function mineSweeper(grid, x, y) {
+      if (x < 1 || x > 3 || y < 1 || y > 3) {
+        return "invalid coordinates"
+      }
+
+      let move = grid[y - 1][x - 1];
+      if (move === "🟥") {
+        return "🟥 💀"
+      } else {
+        return "🟦 🥳"
+      }
       // 🧠 mineSweeper takes a grid as its first argument, and coordinates x and y as the second and third args
       //  The grid is an array of arrays in the following format: [["🟥","🟦","🟥"],["🟦","🟥","🟥"],["🟥","🟦","🟦"]]
       //  Each subarray is a row of the grid, the first subarray being the top row:
@@ -109,7 +133,23 @@
     }
 
     // 👉 CHALLENGE 3
-    function booleanize() {
+    function booleanize(obj) {
+      let result = {}
+      for (let i in obj) {
+        if (i.length > 9) {
+          return "shorten all prop names to 9 chars or less"
+        }
+        let num = obj[i]
+        if (num === 0) {
+          obj[i] = false
+        } else if (num === 1) {
+          obj[i] = true
+        } else if (num === null) {
+          delete obj[i]
+        }
+
+
+      } return obj
       // 🧠 booleanize takes an object as its single argument, which can have any number of properties
       // Loop over the properties and then return the object, after applying the following transformations:
       //    * If a value is the number zero, it must be transformed into the Boolean false
@@ -121,7 +161,22 @@
     }
 
     // 👉 CHALLENGE 4
-    function scrub() {
+    /*
+    loop over forbidden
+    for each word in forbidden, create a filler string of xs using the length of the word
+    for each word in forbidden, use .replaceAll() to replcae all occurences of "word" with 'xx'
+    */
+
+    function scrub(text, forbidden) {
+      let words = text.split(' ')
+      for (let i = 0; i < words.length; i++) {
+        let word = words[i]
+        if (forbidden.includes(word)) {
+          words[i] = 'x'.repeat(word.length)
+        }
+      }
+      return words.join(' ')
+
       // 🧠 scrub takes a string "text" as its first argument, and an array of forbidden words "forbidden" as its second
       // Any word in the text included in the array of forbidden words is replaced with a word of equal length but made of lowcase "x"
       // The scrubbed text is then returned from the function, as seen in the examples below
@@ -136,7 +191,37 @@
     }
 
     // 👉 CHALLENGE 5
-    function normalizePhoneNumber() {
+    function normalizePhoneNumber(number) {
+
+      if (typeof number !== 'string' || number.length !== 10) {
+        return "type a 10-digit number"
+
+      } for (let i = number.length - 1; i >= 0; i--) {
+        if (isNaN(number[i])) {
+          return "invalid phone number"
+        }
+
+      } let template = '(XXX) XXX-XXXX'
+      let digits = number.split('')
+      for (let i = template.length - 1; i >= 0; i--) {
+        if (template[i] === 'X') {
+          template = template.slice(0, i) + digits.pop() + template.slice(i + 1)
+        }
+      } return template
+
+
+      // if (number.length !== 10) {
+      //   return "type a 10-digit number"
+      // }
+      // for (let i = 0; i < number.length; i++)
+      //   if ((number[i]) !== typeof 'number') {
+      //     return "invalid phone number"
+      //   }
+
+
+
+
+
       // 🧠 normalizePhoneNumber takes a string as its only argument, representing a ten-digit number
       // The function returns a string formatted as seen below
       // 🧠 Examples of usage:
@@ -152,6 +237,22 @@
 
     // 👉 CHALLENGE 6 (bonus, NOT graded)
     function diceRolls() {
+      let throws = 0
+      let consecutive = 0
+      while (true){
+      throws ++
+      const roll = math.floor(math.random() * 6) + 1
+      if (roll === 6) {
+        consecutive++
+        if (consecutive === 3) {
+        break 
+      }
+      } else {
+        consecutive = 0
+      }
+      
+      } return throws
+      console.log(throws)
       // 🧠 diceRolls takes no arguments and returns a number
       // The function throws a six-sided dice until 3 sixes in a row are obtained
       // The number of throws it took to obtain that third-in-a-row six is then returned from the function
